# greatflight

./: .gitignore  Budget.xlsx  CMakeLists.txt  NOTES.md  README.md  greatflight.code-workspace
.devcontainer/: devcontainer.json
resources/: Warcraft_Amiga.7z  for.gpl  for.reduced.png.gpl  for2.bm  for2.plt
resources/GUI/: menu_background.xcf
resources/Palettes/: HumanGUI.gpl  HumanGUI.pal  Viewport.pal  Woodland.gpl
resources/Tiled/: woodland.tsx
resources/inputs/: Rgb2Amiga  infopanel_reduced.gpl  newtilemap.xcf
resources/inputs/panel/reduced/: bottompanel.png.reduced.gpl  infopanel.png.reduced.gpl  toppanel.png.reduced.gpl
resources/inputs/panel/reduced/icons/: alchemist.png.reduced.gpl  alchemist.png.scaled.png.reduced.gpl  archer.png.reduced.gpl  archer.png.scaled.png.reduced.gpl  arrow.png.reduced.gpl  arrow.png.scaled.png.reduced.gpl  arrow_2.png.reduced.gpl  arrow_2.png.scaled.png.reduced.gpl  barbed_arrow.png.reduced.gpl  barbed_arrow.png.scaled.png.reduced.gpl  barracks.png.reduced.gpl  barracks.png.scaled.png.reduced.gpl  black_bear.png.reduced.gpl  black_bear.png.scaled.png.reduced.gpl  blessing.png.reduced.gpl  blessing.png.scaled.png.reduced.gpl  bronze_sword.png.reduced.gpl  bronze_sword.png.scaled.png.reduced.gpl  brown_bear.png.reduced.gpl  brown_bear.png.scaled.png.reduced.gpl  build_basic_structure.png.reduced.gpl  build_basic_structure.png.scaled.png.reduced.gpl  cancel.png.reduced.gpl  cancel.png.scaled.png.reduced.gpl  catapult_sandstone_rock.png.reduced.gpl  catapult_sandstone_rock.png.scaled.png.reduced.gpl  christianity.png.reduced.gpl  christianity.png.scaled.png.reduced.gpl  citadel.png.reduced.gpl  citadel.png.scaled.png.reduced.gpl  cleric.png.reduced.gpl  cleric.png.scaled.png.reduced.gpl  derro_hunter.png.reduced.gpl  derro_hunter.png.scaled.png.reduced.gpl  derro_rust_rider.png.reduced.gpl  derro_rust_rider.png.scaled.png.reduced.gpl  ethereal_vision.png.reduced.gpl  ethereal_vision.png.scaled.png.reduced.gpl  ettin.png.reduced.gpl  ettin.png.scaled.png.reduced.gpl  (+116 more)
resources/inputs/units/reduced/: newtilemap.png.reduced.gpl  spearthrower.png.reduced.gpl
resources/maps/: example.map  game.map  m1.tmx
src/: actions.c  actions.h  bob_new.c  bob_new.h  buildings.c  buttons.c  buttons.h  coppertilebuffer.c  coppertilebuffer.h  game.c  game.h  icons.c  icons.h  ingame.c  main.c  map.c  map.h  menu.c  mouse_sprite.c  mouse_sprite.h  player.c  screenpart.h  selection_sprites.c  selection_sprites.h  sprites.c  units.c  units.h  utils.c
src/include/: actions.h  buildings.h  buttons.h  game.h  icons.h  ingame.h  main.h  map.h  menu.h  player.h  resources.h  sprites.h  units.h  utils.h
tools/: font2pngs.py  map2bin.py  png2gpl.py  tileize.py
